<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/react" />

        <EditText
            android:id="@+id/editarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/editarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <Button
            android:id="@+id/botaoLogar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/login"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/forgotPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/facebook_blue"
            android:text="@string/loginFacebook"
            />

        <Button
            android:layout_width="match_parent"
            android:backgroundTint="@color/google_red"
            android:layout_height="60dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/loginGoogle"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/logon"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</LinearLayout>